agregando scope a referencia y subtype

--- a/app/views/admin/trucks/edit.html.erb
+++ b/app/views/admin/trucks/edit.html.erb
@@ -49,7 +49,7 @@
                     <div class="form-group">
 
                         <%= f.label :sub_truck_id, 'Sub tipo' %>
-                        <%= f.collection_select :sub_truck_id, SubTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        <%= f.collection_select :sub_truck_id, SubTruck.getByTypeTruckId(@truck.type_truck_id).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
 
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <%= f.label :referencia_id, 'Referencia' %>
-                        <%= f.collection_select :referencia_id, Referencia.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                        <%= f.collection_select :referencia_id, Referencia.getByTypeTruckId(@truck.type_truck_id).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
                     </div>
                 </div>
 
