--- a/app/views/admin/trucks/new.html.erb
+++ b/app/views/admin/trucks/new.html.erb
@@ -37,7 +37,7 @@
         <div class="col-md-6">
           <div class="form-group">
             <%= f.label :sub_truck_id, 'Sub tipo' %>
-            <%= f.collection_select :sub_truck_id, SubTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+            <%= f.collection_select :sub_truck_id, SubTruck.getByTypeTruckId(params['v']).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
           </div>
         </div>
         <div class="col-md-6">
@@ -74,7 +74,7 @@
         <div class="col-md-6">
           <div class="form-group">
             <%= f.label :referencia_id, 'Referencia' %>
-            <%= f.collection_select :referencia_id, Referencia.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+            <%= f.collection_select :referencia_id, Referencia.getByTypeTruckId(params['v']).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
           </div>
         </div>
 
