--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -85,7 +85,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <%= f.label :sub_truck_id, 'Sub tipo' %>
-                                    <%= f.collection_select :sub_truck_id, SubTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                                    <%= f.collection_select :sub_truck_id, SubTruck.getByTypeTruckId(@truck.type_truck_id).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
                                 </div>
                             </div>
 
@@ -115,7 +115,7 @@
 
                                 <div class="form-group">
                                     <%= f.label :referencia_id, 'Referencia' %>
-                                    <%= f.collection_select :referencia_id, Referencia.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                                    <%= f.collection_select :referencia_id, Referencia.getByTypeTruckId(@truck.type_truck_id).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
                                 </div>
                             </div>
 
@@ -376,7 +376,16 @@
                     </div>
                   </div>
 
+                  <div class="col-md-3 extras ">
+                    <div class="form-gorup">
+                      <label for="">numero de ejes retractiles </label><br/>
 
+                      <%= f.radio_button :ejesretractiles, 1, :checked => :ejesretractiles == 1 %> 1
+
+                      <%= f.radio_button :ejesretractiles, 2, :checked => :ejesretractiles == 2 %> 2
+
+                    </div>
+                  </div>
                 </div>
 
 
