se mejora el codigo

--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -284,13 +284,9 @@
       </li>
 
 
-
-
-
-
-
-
-
+      <li >
+        <a href=" <%=  %>"><i class="fa fa-fw fa-dashboard"></i> Usuarios</a>
+      </li>
 
     </ul>
   </div>
