se agrega el index para la lista de usaurios

--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -167,12 +167,6 @@
         <ul id="demo" class="collapse">
 
 
-
-
-
-
-
-
           <li>
             <%= link_to 'Camiones', admin_trucks_path, method: 'get' %>
           </li>
@@ -285,7 +279,7 @@
 
 
       <li >
-        <a href=" <%=    %>"><i class="fa fa-fw fa-dashboard"></i> Usuarios</a>
+        <a href=" <%=   admin_users_path  %>"><i class="fa fa-fw fa-dashboard"></i> Usuarios</a>
       </li>
 
     </ul>
