--- a/app/views/layouts/cliente.html.erb
+++ b/app/views/layouts/cliente.html.erb
@@ -38,7 +38,8 @@
     <!-- Top Menu Items -->
     <ul class="nav navbar-right top-nav">
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
+        <a href="/inbox-cliente" class="" ><i class="fa fa-envelope"></i> <b class="caret"></b></a>
+         <!--
         <ul class="dropdown-menu message-dropdown">
           <li class="message-preview">
             <a href="#">
@@ -89,6 +90,7 @@
             <a href="#">Read All New Messages</a>
           </li>
         </ul>
+        -->
       </li>
 
       <li class="dropdown">
