se agregan los user_id a los anuncios con esto ya podemos manejar mejor la parte de contactos por lao smensajes enviados

--- a/app/views/layouts/cliente.html.erb
+++ b/app/views/layouts/cliente.html.erb
@@ -38,7 +38,7 @@
     <!-- Top Menu Items -->
     <ul class="nav navbar-right top-nav">
       <li class="dropdown">
-        <a href="/inbox-cliente" class="" ><i class="fa fa-envelope"></i> <b class="caret"></b></a>
+        <a href="<%= inbox_index_path %>" class="" ><i class="fa fa-envelope"></i> <b class="caret"></b></a>
          <!--
         <ul class="dropdown-menu message-dropdown">
           <li class="message-preview">
