se agrega una mejora significativa al agregar los mensajes del inbox

--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -269,7 +269,7 @@
       </div>
     </div><!-- /.tab-pane -->
 
-    <%= render partial: "includes/message_inbox", locals: {object: @truck}  %>
+    <%= render partial: "includes/message_inbox", locals: {object: @truck, , anuncio: '1'}  %>
 
   </div><!-- /.tab-pane -->
 
