--- a/app/views/pages/repuesto.html.erb
+++ b/app/views/pages/repuesto.html.erb
@@ -55,8 +55,7 @@
     </div><!-- /.product-info -->
   </div><!-- /.col-sm-5 -->
 
-  <%= render partial: "includes/message_inbox", locals: {object: @extra}  %>
-
+  <%= render partial: "includes/message_inbox", locals: {object: @extra, anuncio: '2'}  %>
 
 
 </div><!-- /.col -->
