--- a/app/views/pages/servicio.html.erb
+++ b/app/views/pages/servicio.html.erb
@@ -57,15 +57,10 @@
     </div><!-- /.product-info -->
   </div><!-- /.col-sm-5 -->
 
-  <%= render partial: "includes/message_inbox", locals: {object: @service}  %>
-
-
+  <%= render partial: "includes/message_inbox", locals: {object: @service, anuncio: '3' }  %>
 
 </div><!-- /.col -->
 </div><!-- /.row -->
-
-
-
 
 <!-- ============================================== FEATURED PRODUCT ============================================== -->
 
