--- a/app/views/includes/_message_inbox.html.haml
+++ b/app/views/includes/_message_inbox.html.haml
@@ -1,27 +1,28 @@
 #contactar.tab-pane
   .product-tab{:style => "height: auto !important; background-color: transparent; margin-top:-50px;"}
+    %br
+    = render partial: 'includes/messages_errors', locals: {object:  @message}
     .review-form
       .form-container
-        %form.cnt-form{:role => "form"}
+        = form_for  @message , url: inbox_index_path, method: :post, class: "register-form outer-top-xs"   do |f|
           .row
             .col-sm-6
               .form-group
-                %label{:for => "exampleInputName"}
-                  Nombre
-                  %span.astk *
-                %input#nombre.form-control.txt.e{:name => "nombre", :placeholder => "", :type => "text"}
-                  %input#exampleInputName.form-control{:name => "tipo", :placeholder => "", :type => "hidden", :value => "1"}
-                    %input#exampleInputName.form-control{:name => "item", :placeholder => "", :type => "hidden", :value => object.id}
+                = f.label :nombre
+                %span.astk *
+                = f.text_field :nombre, class: 'form-control txt e'
+                = f.hidden_field :tipo, value: anuncio
+                = f.hidden_field :item, value: object.id
+                = f.hidden_field :user_id, value: object.user_id
+                = f.hidden_field :customer_id, value: object.customer_id
               .form-group
-                %label{:for => "exampleInputSummary"}
-                  Teléfono
-                  %span.astk *
-                %input#telefono.form-control.txt.e{:name => "telefono", :placeholder => "", :type => "text"}
+                = f.label :telefono
+                %span.astk *
+                = f.text_field :telefono, class: 'form-control txt e'
             .col-md-6
               .form-group
-                %label{:for => "exampleInputReview"}
-                  Mensaje
-                  %span.astk *
-                %textarea#mensaje.form-control.txt.txt-review.e{:name => "mensaje", :placeholder => "", :rows => "4"}
+                = f.label :mensaje
+                %span.astk *
+                = f.text_area :mensaje, class: 'form-control txt e', rows: 4
           .action.text-right
-            %button#enviarconsulta.btn.btn-primary.btn-upper ENVIAR CONSULTA
+            = f.submit "ENVIAR CONSULTA", class: 'btn btn-primary btn-upper'
