--- a/app/views/inbox/show.html.haml
+++ b/app/views/inbox/show.html.haml
@@ -1,2 +1,26 @@
-%h1 Inbox#show
-%p Find me in app/views/inbox/show.html.haml
+%h1 Mensaje
+%br
+.row
+  .col-md-12
+    %b
+      Fecha: 
+    = @message.created_at.strftime('%d-%m-%Y')
+.row
+  .col-md-12
+    %b
+      Enviado Por: 
+    = @message.nombre
+.row
+  .col-md-12
+    %b
+      Telefono:
+    = @message.telefono
+%br
+.row
+  .col-md-12
+    %b
+      Mensaje:
+    %p  
+      = @message.mensaje
+%hr      
+= link_to 'Inbox', inbox_index_path, :class=>'btn btn-primary'
