--- a/app/views/layouts/cliente.html.erb
+++ b/app/views/layouts/cliente.html.erb
@@ -114,7 +114,9 @@
           <a href=" <%=  micuenta_path %>"><i class="fa fa-fw fa-dashboard"></i> Inicio</a>
         </li>
 
-
+        <li >
+          <a href=" <%=  inbox_index_path %>"><i class="fa fa-fw fa-envelope"></i> <%= "Inbox (#{@user.messages_no_leidos.size})" %> </a>
+        </li>
 
 
 
