--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -36,7 +36,7 @@
   <!-- Top Menu Items -->
   <ul class="nav navbar-right top-nav">
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
+      <a href="<%= admin_inbox_index_path %>" class="dropdown-toggle" ><i class="fa fa-envelope"></i> <b class="caret"></b></a>
  <!--      
       <ul class="dropdown-menu message-dropdown">
         <li class="message-preview">
@@ -143,6 +143,9 @@
         <a href=" <%=  admin_path %>"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
       </li>
 
+       <li >
+          <a href=" <%=  admin_inbox_index_path %>"><i class="fa fa-fw fa-envelope"></i> <%= "Inbox (#{current_user.messages_no_leidos.size})" %> </a>
+        </li>
 
       <li >
         <a href=" <%=  admin_banners_path %>"><i class="fa fa-fw fa-dashboard"></i> Banners</a>
