Se resuelve problema con el parametro si no guarda en el new de camioines

--- a/app/views/admin/trucks/new.html.erb
+++ b/app/views/admin/trucks/new.html.erb
@@ -31,13 +31,12 @@
 
 
     <%= form_for @truck, :url => admin_trucks_path, :method=>'post' do |f|  %>
-        <%= f.hidden_field :type_truck_id, :value=>params['v']  %>
 
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
             <%= f.label :sub_truck_id, 'Sub tipo' %>
-            <%= f.collection_select :sub_truck_id, SubTruck.getByTypeTruckId(params['v']).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+            <%= f.collection_select :sub_truck_id, SubTruck.getByTypeTruckId(@truck.type_truck_id).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
           </div>
         </div>
         <div class="col-md-6">
@@ -74,7 +73,7 @@
         <div class="col-md-6">
           <div class="form-group">
             <%= f.label :referencia_id, 'Referencia' %>
-            <%= f.collection_select :referencia_id, Referencia.getByTypeTruckId(params['v']).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+            <%= f.collection_select :referencia_id, Referencia.getByTypeTruckId(@truck.type_truck_id).order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
           </div>
         </div>
 
