--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -211,10 +211,7 @@
 
 
 <!-- 1 tractomula-->
-			<% if params[:v] == '1' %>
-
-
-
+			<% if params[:v] == '1'|| @truck.type_truck_id==1 %>
 
 				<div class="row">
 				  <div class="col-md-6">
@@ -252,15 +249,6 @@
 
 
 				</div>
-
-
-
-
-
-
-
-
-
 
 
 
@@ -703,18 +691,6 @@
 				  </div>
 				</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
 				<div class="row">
 				  <div class="col-md-3">
 					<div class="form-group">
@@ -756,12 +732,6 @@
 					  </label>
 					  <br/>
 
-
-
-
-
-
-
 					</div>
 
 
@@ -800,8 +770,6 @@
 					</label>
 					<br/>
 
-
-
 					<label>
 					  <%= f.check_box :unicodueno  %> Unico Dueño
 					</label>
@@ -809,17 +777,7 @@
 
 				  </div>
 
-
-
-
-
 				</div>
-
-
-
-
-
-
 
 			<% end %>
 
@@ -833,15 +791,15 @@
 				<div class="row">
 				  <div class="col-md-4">
 					<div class="form-group">
-					  <%= f.label :motors_truck_id, 'Tipo Carroceria' %>
-					  <%= f.collection_select :motors_truck_id, TipoCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+					  <%= f.label :tipo_carroceria_id, 'Tipo Carroceria' %>
+					  <%= f.collection_select :tipo_carroceria_id, TipoCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
 					</div>
 				  </div>
 
 				  <div class="col-md-4">
 					<div class="form-group">
-					  <%= f.label :boxes_truck_id, 'Marca Carroceria' %>
-					  <%= f.collection_select :boxes_truck_id, MarcaCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+					  <%= f.label :marca_carroceria_id, 'Marca Carroceria' %>
+					  <%= f.collection_select :marca_carroceria_id, MarcaCarroceria.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
 					</div>
 				  </div>
 
