--- a/app/views/pages/mirepuestos.html.erb
+++ b/app/views/pages/mirepuestos.html.erb
@@ -62,11 +62,11 @@
               </td>
 
               <td>
-                <%=   extra.type_truck.name if extra.type_truck %>
+                <%=   extra.type_truck.name if extra.type_truck_id %>
               </td>
 
               <td>
-                <%=  extra.brand_extra.name if extra.brand_extra %>
+                <%=  extra.brand_extra.name if extra.brand_extra_id %>
               </td>
 
               <td>
