--- a/app/views/pages/mirepuestosedit.html.erb
+++ b/app/views/pages/mirepuestosedit.html.erb
@@ -131,11 +131,8 @@
             </div>
         </div>
 
+      <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: mirepuestos_path } %>
 
-
-
-    <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-    <%=  link_to 'Cancelar', mirepuestos_path, :class=>'btn btn-warning' %>
 <% end %>
 
 
