--- a/app/views/admin/services/new.html.erb
+++ b/app/views/admin/services/new.html.erb
@@ -99,7 +99,11 @@
           <div class="col-md-6">
             <div class="form-group">
               <%= f.label :city_id, 'Ciudad' %>
-              <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+              <% if @truck.city_id.nil? %>
+                  <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+              <% else %>
+                  <%= f.collection_select(:city_id, City.getByState(@truck.state_id).order(:name),:id,:name, {}, { :class => 'form-control' }) %>
+              <% end %>
             </div>
           </div>
 
