--- a/app/views/customer/customer_mailer/create_by_admin.html.erb
+++ b/app/views/customer/customer_mailer/create_by_admin.html.erb
@@ -34,7 +34,7 @@ h2{
   width: 100%;
   border-top: 1px solid #CCC;
   float: left;
-  padding: 20px 0 30px 0; 
+  padding: 20px 0 30px 0;
 }
 a{
   text-decoration: none;
@@ -44,14 +44,14 @@ a{
 
 </head>
  
-<body style="background-color: #EFEFEF;"><center>
+<body style="background-color: #EFEFEF;"><div style="text-align: center;">
    
   <table width="750" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td>
-    
+
     <div style="float:left;width:100%;text-align: center;"><%= image_tag attachments['logo.png'].url %></div>
-    <div style="float:left;background-color:#FFF;width:100%;margin-top-5px;border-radius: 10px;padding: 20px;">
+    <div style="float:left;background-color:#FFF;width:100%;margin-top:5px;border-radius: 10px;padding: 20px;">
       <h2>Gracias por Registrarte!!!</h2>
       <% offer    = @user.offer.first
          quantity = @user.quantities.first
@@ -81,5 +81,5 @@ Tel.: (57) 317 4395045
   </tr>
 </table>
 
-</center></body>
+</div></body>
 </html>
