--- a/app/views/pages/micuentalogin.html.erb
+++ b/app/views/pages/micuentalogin.html.erb
@@ -32,6 +32,7 @@
       <div class="form-group">
         <label for="">Email</label><br />
         <input type="text" name="email" class="form-control"/>
+        <%= email_field_tag(:name=> 'email' ,class: 'form-control form-el') %>
       </div>
 
       <div class="form-group">
