--- a/app/views/admin/extras/edit.html.erb
+++ b/app/views/admin/extras/edit.html.erb
@@ -203,10 +203,8 @@
           </div>
         </div>
 
+        <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: admin_extras_path } %>
 
-
-        <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-        <%=  link_to 'Cancelar', admin_extras_path, :class=>'btn btn-warning' %>
     <% end %>
 
   </div>
