--- a/app/views/admin/offers/new.html.erb
+++ b/app/views/admin/offers/new.html.erb
@@ -120,9 +120,8 @@
 
   </div>
 
+        <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: admin_offers_path } %>
 
-        <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-        <%=  link_to 'Cancelar', admin_offers_path, :class=>'btn btn-warning' %>
     <% end %>
 
   </div>
