--- a/app/views/admin/services/edit.html.erb
+++ b/app/views/admin/services/edit.html.erb
@@ -183,13 +183,8 @@
           </div>
         </div>
 
+        <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: admin_services_path } %>
 
-
-
-
-
-        <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-        <%=  link_to 'Cancelar', admin_services_path, :class=>'btn btn-warning' %>
     <% end %>
 
   </div>
