--- a/app/views/admin/trucks/edit.html.erb
+++ b/app/views/admin/trucks/edit.html.erb
@@ -1173,11 +1173,7 @@
 
       <br/><br/>
 
-
-
-
-      <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-    <%=  link_to 'Cancelar', admin_trucks_path, :class=>'btn btn-warning' %>
+      <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: admin_trucks_path } %>
 <% end %>
 
 
