--- a/app/views/admin/trucks/new.html.erb
+++ b/app/views/admin/trucks/new.html.erb
@@ -460,9 +460,8 @@
         </div>
       </div>
 
+        <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: admin_trucks_path } %>
 
-      <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-        <%=  link_to 'Cancelar', admin_trucks_path, :class=>'btn btn-warning' %>
     <% end %>
 
   </div>
