--- a/app/views/pages/micuentalogin.html.erb
+++ b/app/views/pages/micuentalogin.html.erb
@@ -31,8 +31,7 @@
 
       <div class="form-group">
         <label for="">Email</label><br />
-        <input type="text" name="email" class="form-control"/>
-        <%= email_field_tag(:name=> 'email' ,class: 'form-control form-el') %>
+        <%= email_field_tag  'email',nil ,class: 'form-control' %>
       </div>
 
       <div class="form-group">
