--- a/app/views/customer/customer_mailer/create_by_admin.html.erb
+++ b/app/views/customer/customer_mailer/create_by_admin.html.erb
@@ -50,7 +50,7 @@ a{
   <tr>
     <td>
     
-    <div style="float:left;width:100%;text-align: center;"><%= image_tag attachments['logo.png'].url %></div>
+    <div style="float:left;width:100%;text-align: center;"><%= image_tag attachments['logo.png'].url, alt: "Camión365.com" %></div>
     <div style="float:left;background-color:#FFF;width:100%;margin-top-5px;border-radius: 10px;padding: 20px;">
       <h2>Gracias por Registrarte!!!</h2>
       <% offer    = @user.offer.first
