--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -121,7 +121,7 @@
       <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= "#{current_user.first_name} #{current_user.last_name}" %> <b class="caret"></b></a>
       <ul class="dropdown-menu">
         <li>
-          <a href="#"><i class="fa fa-fw fa-user"></i>Perfil</a>
+          <a href="<%=admin_customer_path(current_user.id) %>"><i class="fa fa-fw fa-user"></i>Perfil</a>
         </li>
         <li class="divider"></li>
         <li>
