--- a/app/views/layouts/cliente.html.erb
+++ b/app/views/layouts/cliente.html.erb
@@ -97,7 +97,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= @user.name %> <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li>
-            <a href="<%=admin_customer_path(@user.id) %>"> <i class="fa fa-fw fa-user"></i> Perfil</a>
+            <a href="<%= %>"> <i class="fa fa-fw fa-user"></i> Perfil</a>
           </li>
 
           <li class="divider"></li>
