--- a/app/views/shared/_form_search_trucks.html.haml
+++ b/app/views/shared/_form_search_trucks.html.haml
@@ -14,7 +14,7 @@
             TIPO DE
             %b CAMIÓN
         .attribute_list
-          = f.select(:type_truck_id_eq, options_for_select(@tiposCaminiones.map{ |c| [c.name, c.id, {'data-id'=>c.id}] }), {prompt: 'Todas las marcas'}, { class:  'form-control', id: 'camion_type'})
+          = f.select(:type_truck_id_eq, options_for_select(@tiposCaminiones.map{ |c| [c.name, c.id, {'data-id'=>c.id}] }), {prompt: 'Todos los tipos'}, { class:  'form-control', id: 'camion_type'})
     %p
       %fieldset.attribute_fieldset
         %label.attribute_label.attribute-key{:for => "group_1"}
