se agrega el maximo de caracteres para el telefono

--- a/app/views/admin/services/new.html.erb
+++ b/app/views/admin/services/new.html.erb
@@ -43,7 +43,7 @@
           <div class="col-md-6">
             <div class="form-group">
               <%= f.label :phone, 'Teléfono' %>
-              <%= f.text_field :phone, :class =>'form-control'  %>
+              <%= f.text_field :phone, :class =>'form-control', maxlength: 11  %>
             </div>
           </div>
 
