--- a/app/views/pages/mirepuestosedit.html.erb
+++ b/app/views/pages/mirepuestosedit.html.erb
@@ -50,7 +50,7 @@
             <div class='col-md-5 col-md-offset-1'>
             <div class="form-group">
                 <%= f.label :phone, 'Teléfono' %>
-                <%= f.text_field :phone, :class =>'form-control'  %>
+                <%= f.text_field :phone, :class =>'form-control', maxlength: 11  %>
             </div>
         </div>
                 <div class="col-md-5">
